# lgpl_ffmpeg_flutter

./: .gitignore  .metadata  .pubignore  CHANGELOG.md  LICENSE  NOTICE.md  README.md  analysis_options.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: CMakeLists.txt  lgpl_ffmpeg_flutter_backend.cpp  lgpl_ffmpeg_flutter_backend.h
android/src/main/jniLibs/: README.md
example/: README.md  pubspec.yaml
example/android/: gradle.properties
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/integration_test/: plugin_integration_test.dart
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/ios/RunnerTests/: RunnerTests.swift
example/lib/: main.dart
example/test/: widget_test.dart
ios/: lgpl_ffmpeg_flutter.podspec
ios/Classes/: LgplFfmpegFlutterPlugin.swift  lgpl_ffmpeg_flutter_backend.c  lgpl_ffmpeg_flutter_backend.h
ios/Frameworks/: README.md
ios/Frameworks/libavcodec.xcframework/: Info.plist
ios/Frameworks/libavformat.xcframework/: Info.plist
ios/Frameworks/libswresample.xcframework/: Info.plist
lib/: lgpl_ffmpeg_flutter.dart
lib/src/: cover_image.dart  ffmpeg_backend_info.dart  lgpl_ffmpeg_flutter.dart  lgpl_ffmpeg_flutter_platform.dart  method_channel_lgpl_ffmpeg_flutter.dart  video_info.dart  video_process_error.dart
scripts/: build_ffmpeg_lgpl.sh
test/: lgpl_ffmpeg_flutter_test.dart  method_channel_lgpl_ffmpeg_flutter_test.dart
(+22 files in other folders)
